--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Formulario</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <form action="">
+        <p>
+            <label for="username"></label>
+            <input type="text" name="username" id="username" title="Introduca your name" 
+            autocomplete="name"/>
+        </p>
+        <input type="submit" value="Submit"/>
+    </form>
 </body>
 </html>
