--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <form action="">
         <p>
-            <label for="username"></label>
+            <label for="username">Username</label>
             <input type="text" name="username" id="username" title="Introduca your name" 
             autocomplete="name"/>
         </p>
