--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
 </head>
 <body>
     <form action="">
-        <p>
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" title="Introduca your name" 
-            autocomplete="name"/>
-        </p>
-        <input type="submit" value="Submit"/>
+        <label for="name">Nombre: </label>
+        <input type="text" id="name" name="name"><br>
+        <label for="family-name">Primer apellido: </label>
+        <input type="text" id="family-name" name="family-name"><br>
+        <label for="bday">Fecha de nacimiento: </label>
+        <input type="date" id="bday" name="bday" placeholder="dd/mm/yyyy"><br>
+        <label for="email">E-mail: </label>
+        <input type="text" id="email" name="email"><br>
+        <label for="tel">Telefono: </label>
+        <input type="text" id="tel" name="tel"><br>
+        <label for="new-password">Password: </label>
+        <input type="text" id="new-password" name="new-password" required="new-password"><br>
+        <label for="color">Color favorito: </label>
+        <input type="text" id="color" name="color"><br>
+        <input type="Registrar" value="registrar"/>
     </form>
 </body>
 </html>
