--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
 </head>
 <body>
     <form action="">
-        <label for="name">Nombre: </label>
-        <input type="text" id="name" name="name"><br>
-        <label for="family-name">Primer apellido: </label>
-        <input type="text" id="family-name" name="family-name"><br>
-        <label for="bday">Fecha de nacimiento: </label>
-        <input type="date" id="bday" name="bday" placeholder="dd/mm/yyyy"><br>
-        <label for="email">E-mail: </label>
-        <input type="text" id="email" name="email"><br>
-        <label for="tel">Telefono: </label>
-        <input type="text" id="tel" name="tel"><br>
-        <label for="new-password">Password: </label>
-        <input type="text" id="new-password" name="new-password" required="new-password"><br>
-        <label for="color">Color favorito: </label>
-        <input type="text" id="color" name="color"><br>
-        <input type="Registrar" value="registrar"/>
+            <label for="name">Nombre: </label><br>
+            <input type="text" id="name" name="name"><br>
+
+            <label for="family-name">Primer apellido: </label><br>
+            <input type="text" id="family-name" name="family-name"><br>
+
+            <label for="bday">Fecha de nacimiento: </label><br>
+            <input type="date" id="bday" name="bday" placeholder="dd/mm/yyyy"><br>
+
+            <label for="email">E-mail: </label><br>
+            <input type="text" id="email" name="email"><br>
+
+            <label for="tel">Telefono: </label><br>
+            <input type="text" id="tel" name="tel"><br>
+
+            <label for="new-password">Password: </label><br>
+            <input type="text" id="new-password" name="new-password" required="new-password"><br>
+
+            <label for="color">Color favorito: </label><br>
+            <input type="text" id="color" name="color"><br>
+
+            <input type="submit" value="Registrar"/>
     </form>
 </body>
 </html>
