--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Página de inicio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Página de inicio</title>
 </head>
-  <body>
+
+<body>
+
+  <div id="b">
+
     <header id="header-menu">
-      <img src="img/icon.png" id="icon-top" alt="Icono corporativo">
-      <nav>
-        <ul>
+      <nav style="display: inline-flex">
+        <img src="img/icon.png" id="icon-top" alt="Icono corporativo">
+        <ul id="menu">
           <li> <a href="otra_pag.html">Menú ítem</a> </li>
           <li>Menú ítem</li>
           <li>Menú ítem</li>
         </ul>
       </nav>
     </header>
+
     <section>
       <article>
         <header>
@@ -25,6 +31,7 @@
         </header>
         <p>Página de prueba para ver como estructurar y dotar de color para ser usada en nuestra página principal.</p>
       </article>
+
       <article>
         <header>
           <h2>Revisa la web de https://www.w3schools.com</h2>
@@ -33,14 +40,21 @@
         <p>HTML5 + CSS3 está explicado en detalle con múltiples ejemplos que puedes cortar y pegar en tu página web.</p>
       </article>
     </section>
+
     <aside>
       <h2>Otras webs:</h2>
       <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">Mozilla HTML</a></p>
-      
+
       <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">Mozilla CSS</a></p>
     </aside>
-    <footer>
-      <small>Interfaces de Usuario 2021-2022 <a href="https://oas.sci.uma.es:8443/ht/2021/ProgramasAsignaturas_Titulacion_5103_AsigUMA_51169.pdf" target="_blank">Guía docente</a></small>
-    </footer>
-  </body>
+  </div>
+
+  <footer>
+    <small>Interfaces de Usuario 2021-2022 <a
+        href="https://oas.sci.uma.es:8443/ht/2021/ProgramasAsignaturas_Titulacion_5103_AsigUMA_51169.pdf"
+        target="_blank">Guía docente</a></small>
+  </footer>
+
+</body>
+
 </html>
